[#6] Otimizações gerais e melhorias de qualidade de software